@@ -5,21 +5,20 @@ import org.springframework.data.jpa.domain.Specification;
 
 public class StudentSpecification {
 
-    public static Specification<Student> search(String keyword) {
-        return (root, query, criteriaBuilder) -> {
-            if (keyword == null || keyword.trim().isEmpty()) {
-                return criteriaBuilder.conjunction();
+    public static Specification<Student> carnetContains(String carnet) {
+        return (root, query, cb) -> {
+            if (carnet == null || carnet.isBlank()){
+                return cb.conjunction();
             }
-
-            String searchPattern = "%" + keyword.toLowerCase() + "%";
-
-            return criteriaBuilder.or(
-                    criteriaBuilder.like(criteriaBuilder.lower(root.get("firstName")), searchPattern),
-                    criteriaBuilder.like(criteriaBuilder.lower(root.get("secondName")), searchPattern),
-                    criteriaBuilder.like(criteriaBuilder.lower(root.get("firstLastName")), searchPattern),
-                    criteriaBuilder.like(criteriaBuilder.lower(root.get("secondLastName")), searchPattern),
-                    criteriaBuilder.like(criteriaBuilder.lower(root.get("carnet")), searchPattern)
-            );
+            String value = "%" + carnet.toUpperCase() +"%";
+            return cb.like(cb.upper(root.get("carnet")), value);
         };
+    }
+
+    public static Specification<Student> searchAll(String search) {
+        // Unimos dinámicamente la búsqueda global (Persona) con la específica (Estudiante)
+        return Specification
+                .where(PersonSpecification.<Student>searchContains(search))
+                .or(carnetContains(search));
     }
 }
